--- a/crates/optimism/bin/Cargo.toml
+++ b/crates/optimism/bin/Cargo.toml
@@ -55,6 +55,8 @@ min-info-logs = ["tracing/release_max_level_info"]
 min-debug-logs = ["tracing/release_max_level_debug"]
 min-trace-logs = ["tracing/release_max_level_trace"]
 
+edge = ["reth-optimism-cli/edge"]
+
 [[bin]]
 name = "op-reth"
 path = "src/main.rs"
