--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -171,7 +171,7 @@ min-trace-logs = [
     "reth-node-core/min-trace-logs",
 ]
 
-storage-edge = ["reth-ethereum-cli/storage-edge"]
+edge = ["reth-ethereum-cli/edge"]
 
 [[bin]]
 name = "reth"
