--- a/crates/ethereum/cli/Cargo.toml
+++ b/crates/ethereum/cli/Cargo.toml
@@ -87,4 +87,4 @@ min-trace-logs = [
     "reth-node-core/min-trace-logs",
 ]
 
-storage-edge = ["reth-cli-commands/storage-edge"]
+edge = ["reth-cli-commands/edge"]
