--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -114,6 +114,10 @@ harness = false
 name = "state_root_task"
 harness = false
 
+[[bench]]
+name = "evm_state_hashing"
+harness = false
+
 [features]
 test-utils = [
     "reth-chain-state/test-utils",
