--- a/bin/reth-bench/Cargo.toml
+++ b/bin/reth-bench/Cargo.toml
@@ -54,6 +54,8 @@ serde_json.workspace = true
 async-trait.workspace = true
 futures.workspace = true
 tokio = { workspace = true, features = ["sync", "macros", "time", "rt-multi-thread"] }
+tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
+http.workspace = true
 
 # misc
 clap = { workspace = true, features = ["derive", "env"] }
