refactor(bench): simplify persistence subscription with Alloy pubsub API
- Replace ~125 lines of manual tokio-tungstenite WebSocket code with ~25 lines using Alloy pubsub
- Add PersistenceTracker struct to consolidate stats tracking
- Extract wait_for_persistence helper to deduplicate checkpoint/final sync logic
- Remove tokio-tungstenite and http dependencies
- Add alloy-network dependency for Ethereum type

--- a/bin/reth-bench/Cargo.toml
+++ b/bin/reth-bench/Cargo.toml
@@ -26,8 +26,9 @@ reth-tracing.workspace = true
 # alloy
 alloy-eips.workspace = true
 alloy-json-rpc.workspace = true
+alloy-network.workspace = true
 alloy-primitives.workspace = true
-alloy-provider = { workspace = true, features = ["engine-api", "reqwest-rustls-tls"], default-features = false }
+alloy-provider = { workspace = true, features = ["engine-api", "pubsub", "reqwest-rustls-tls"], default-features = false }
 alloy-pubsub.workspace = true
 alloy-rpc-client = { workspace = true, features = ["pubsub"] }
 alloy-rpc-types-engine.workspace = true
@@ -41,10 +42,6 @@ op-alloy-rpc-types-engine = { workspace = true, features = ["serde"] }
 # reqwest
 reqwest = { workspace = true, default-features = false, features = ["rustls-tls-native-roots"] }
 
-# websocket
-tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
-http.workspace = true
-
 # tower
 tower.workspace = true
 
@@ -54,6 +51,9 @@ tracing.workspace = true
 # serde
 serde.workspace = true
 serde_json.workspace = true
+
+# url parsing
+url.workspace = true
 
 # async
 async-trait.workspace = true
