--- a/crates/exex/exex/Cargo.toml
+++ b/crates/exex/exex/Cargo.toml
@@ -57,6 +57,7 @@ reth-evm-ethereum.workspace = true
 reth-primitives-traits = { workspace = true, features = ["test-utils"] }
 reth-provider = { workspace = true, features = ["test-utils"] }
 reth-testing-utils.workspace = true
+reth-trie-common = { workspace = true, features = ["serde-bincode-compat"] }
 
 alloy-genesis.workspace = true
 
@@ -76,6 +77,7 @@ serde = [
     "rand/serde",
     "secp256k1/serde",
     "reth-primitives-traits/serde",
+    "reth-trie-common/serde",
     "reth-prune-types/serde",
     "reth-config/serde",
     "reth-ethereum-primitives/serde",
