--- a/crates/storage/errors/Cargo.toml
+++ b/crates/storage/errors/Cargo.toml
@@ -26,6 +26,7 @@ derive_more.workspace = true
 thiserror.workspace = true
 
 revm-database-interface.workspace = true
+revm-state.workspace = true
 
 [features]
 default = ["std"]
@@ -39,4 +40,5 @@ std = [
     "revm-database-interface/std",
     "reth-prune-types/std",
     "reth-static-file-types/std",
+    "revm-state/std",
 ]
