feat(triedb): add triedb support for latest state providers and performance benchmark
- Implement triedb support in HistoricalStateProvider and HistoricalStateProviderRef
- Fix history_by_block_hash() to use LatestStateProviderRef with triedb
- Add state_root_with_updates_plain() implementation for historical providers
- Add benchmark comparing MDBX vs TrieDB state root performance

--- a/crates/optimism/node/Cargo.toml
+++ b/crates/optimism/node/Cargo.toml
@@ -95,7 +95,7 @@ tracing.workspace = true
 
 [features]
 default = ["reth-codec"]
-triedb = ["reth-provider/triedb", "reth-evm/triedb", "reth-db-common/triedb"]
+triedb = ["reth-provider/triedb", "reth-evm/triedb", "reth-db-common/triedb", "reth-optimism-storage/triedb"]
 asm-keccak = [
     "alloy-primitives/asm-keccak",
     "reth-optimism-node/asm-keccak",
