chore: add metrics for state_root, and benchmark

--- a/crates/optimism/bin/Cargo.toml
+++ b/crates/optimism/bin/Cargo.toml
@@ -30,6 +30,7 @@ workspace = true
 default = ["jemalloc", "otlp", "reth-optimism-evm/portable", "js-tracer", "keccak-cache-global", "asm-keccak"]
 
 triedb = ["reth-optimism-node/triedb"]
+metrics = ["reth-optimism-node/metrics"]
 
 otlp = ["reth-optimism-cli/otlp"]
 
