--- a/crates/optimism/evm/Cargo.toml
+++ b/crates/optimism/evm/Cargo.toml
@@ -81,3 +81,4 @@ portable = [
     "revm/portable",
 ]
 rpc = ["reth-rpc-eth-api", "reth-optimism-primitives/serde", "reth-optimism-primitives/reth-codec", "alloy-evm/rpc"]
+metrics = ["reth-evm/metrics"]
