--- a/crates/optimism/node/Cargo.toml
+++ b/crates/optimism/node/Cargo.toml
@@ -135,6 +135,7 @@ test-utils = [
     "reth-stages-types/test-utils",
 ]
 reth-codec = ["reth-optimism-primitives/reth-codec"]
+metrics = ["reth-optimism-evm/metrics"]
 
 [[test]]
 name = "e2e_testsuite"
