--- a/crates/trie/sparse-parallel/Cargo.toml
+++ b/crates/trie/sparse-parallel/Cargo.toml
@@ -39,6 +39,7 @@ reth-trie-common = { workspace = true, features = ["test-utils", "arbitrary"] }
 reth-trie-db.workspace = true
 reth-trie-sparse = { workspace = true, features = ["test-utils"] }
 reth-trie.workspace = true
+reth-tracing.workspace = true
 
 # misc
 arbitrary.workspace = true
