--- a/crates/optimism/cli/Cargo.toml
+++ b/crates/optimism/cli/Cargo.toml
@@ -99,6 +99,8 @@ jemalloc-symbols = [
     "reth-node-metrics/jemalloc-symbols",
 ]
 
+tracy = ["reth-tracing/tracy", "reth-node-core/tracy"]
+
 dev = [
     "dep:proptest",
     "reth-cli-commands/arbitrary",
