feat: add tracy feature to binary crates
Adds standalone tracy feature flag to reth, op-reth, reth-bench, and
reth-bench-compare binaries. The tracy-allocator feature now enables
the tracy feature, which provides tracing-tracy integration for
profiling with the Tracy profiler.

--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -131,8 +131,9 @@ jemalloc-unprefixed = [
 tracy-allocator = [
     "reth-cli-util/tracy-allocator",
     "reth-ethereum-cli/tracy-allocator",
-    "reth-node-core/tracy",
+    "tracy",
 ]
+tracy = ["reth-ethereum-cli/tracy"]
 
 # Because jemalloc is default and preferred over snmalloc when both features are
 # enabled, `--no-default-features` should be used when enabling snmalloc or
