--- a/crates/cli/util/Cargo.toml
+++ b/crates/cli/util/Cargo.toml
@@ -27,7 +27,6 @@ thiserror.workspace = true
 serde.workspace = true
 
 tracy-client = { workspace = true, optional = true }
-reth-tracing = { workspace = true, optional = true }
 
 [dev-dependencies]
 rand.workspace = true
@@ -47,7 +46,7 @@ jemalloc-prof = ["jemalloc", "tikv-jemallocator?/profiling"]
 jemalloc-unprefixed = ["jemalloc", "tikv-jemallocator?/unprefixed_malloc_on_supported_platforms"]
 
 # Wraps the selected allocator in the tracy profiling allocator
-tracy-allocator = ["dep:tracy-client", "reth-tracing/tracy"]
+tracy-allocator = ["dep:tracy-client"]
 
 snmalloc = ["dep:snmalloc-rs"]
 
