--- a/crates/storage/db/Cargo.toml
+++ b/crates/storage/db/Cargo.toml
@@ -20,6 +20,8 @@ reth-nippy-jar.workspace = true
 reth-tracing.workspace = true
 reth-static-file-types.workspace = true
 
+fixed-map.workspace = true
+
 # ethereum
 alloy-primitives.workspace = true
 
