perf: use fixed-map for StaticFileProviderMetrics segments

--- a/crates/storage/provider/Cargo.toml
+++ b/crates/storage/provider/Cargo.toml
@@ -47,6 +47,7 @@ reth-metrics.workspace = true
 metrics.workspace = true
 
 # misc
+fixed-map.workspace = true
 itertools.workspace = true
 notify = { workspace = true, default-features = false, features = ["macos_fsevent"] }
 parking_lot.workspace = true
