fix: propagate edge feature to reth-node-core for version output
The edge feature was not appearing in `reth --version` output because
reth-node-core (where build.rs generates version info via vergen) was
not receiving the edge feature flag.

This adds an edge marker feature to reth-node-core and updates the
feature propagation in:
- bin/reth: forwards edge to reth-node-core
- reth-optimism-cli: forwards edge to reth-node-core

Now `VERGEN_CARGO_FEATURES` will include 'edge' when building with
`--features edge`, making it visible in the Build Features line of
`reth --version` output.

--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -176,7 +176,7 @@ min-trace-logs = [
     "reth-node-core/min-trace-logs",
 ]
 
-edge = ["reth-ethereum-cli/edge"]
+edge = ["reth-ethereum-cli/edge", "reth-node-core/edge"]
 
 [[bin]]
 name = "reth"
