feat(flashblocks): add transaction caching to avoid re-executing unchanged transactions
Add cumulative state caching to FlashBlockBuilder to skip re-executing
transactions that were already processed in previous flashblocks.

- Add TransactionCache storing cumulative BundleState and receipts
- Use prefix matching to detect when execution can resume from cached state
- Use with_bundle_prestate() to restore cached state (same mechanism as speculative execution)
- Pass cache ownership to spawned build tasks and return with results
- Clear cache on reorg, catch-up, or depth limit exceeded

--- a/crates/optimism/flashblocks/Cargo.toml
+++ b/crates/optimism/flashblocks/Cargo.toml
@@ -29,8 +29,9 @@ reth-metrics.workspace = true
 
 # alloy
 alloy-eips = { workspace = true, features = ["serde"] }
-alloy-primitives = { workspace = true, features = ["serde"] }
+alloy-primitives = { workspace = true, features = ["serde", "map-foldhash"] }
 alloy-rpc-types-engine = { workspace = true, features = ["serde"] }
+alloy-rpc-types.workspace = true
 alloy-consensus.workspace = true
 
 # op-alloy
