--- a/crates/tracing/Cargo.toml
+++ b/crates/tracing/Cargo.toml
@@ -33,4 +33,5 @@ rolling-file.workspace = true
 [features]
 default = ["otlp"]
 otlp = ["reth-tracing-otlp"]
+otlp-logs = ["reth-tracing-otlp/otlp-logs"]
 tracy = ["tracing-tracy", "tracy-client"]
