--- a/crates/trie/common/Cargo.toml
+++ b/crates/trie/common/Cargo.toml
@@ -136,3 +136,7 @@ rayon = ["dep:rayon"]
 [[bench]]
 name = "prefix_set"
 harness = false
+
+[[bench]]
+name = "extend_ref_benchmark"
+harness = false
