--- a/crates/chainspec/Cargo.toml
+++ b/crates/chainspec/Cargo.toml
@@ -25,6 +25,9 @@ alloy-genesis.workspace = true
 alloy-primitives = { workspace = true, features = ["rlp"] }
 alloy-consensus.workspace = true
 
+# revm
+revm-primitives.workspace = true
+
 # misc
 auto_impl.workspace = true
 serde_json.workspace = true
