--- a/crates/optimism/reth/Cargo.toml
+++ b/crates/optimism/reth/Cargo.toml
@@ -75,9 +75,9 @@ arbitrary = [
     "reth-codecs?/arbitrary",
 ]
 keccak-cache-global = [
-	"reth-optimism-node?/keccak-cache-global",
-	"reth-node-core?/keccak-cache-global",
-	"reth-optimism-cli?/keccak-cache-global"
+    "reth-optimism-node?/keccak-cache-global",
+    "reth-node-core?/keccak-cache-global",
+    "reth-optimism-cli?/keccak-cache-global",
 ]
 test-utils = [
     "reth-chainspec/test-utils",
