test: add tests for EvmConfig
fix and extend tests

fix(evm): preserve tx_gas_limit_cap from helper and consolidate tests

rename test

refactor tests

fix comment

remove hardcoded values

x

fix tests

extend tests

consistency with tests

x

--- a/crates/optimism/evm/Cargo.toml
+++ b/crates/optimism/evm/Cargo.toml
@@ -47,6 +47,7 @@ thiserror.workspace = true
 reth-evm = { workspace = true, features = ["test-utils"] }
 reth-revm = { workspace = true, features = ["test-utils"] }
 alloy-genesis.workspace = true
+alloy-rpc-types-engine.workspace = true
 reth-optimism-primitives = { workspace = true, features = ["arbitrary"] }
 
 [features]
