perf(trie): optimize kway_merge_sorted - return Vec directly and use dedup_by
- Change return type from impl Iterator to Vec<(K,V)> to avoid double-collect
  (previously collected internally then callers collected again)
- Replace coalesce() with simpler dedup_by() for duplicate key handling
- Update all callers to remove redundant .collect() calls

--- a/crates/trie/common/Cargo.toml
+++ b/crates/trie/common/Cargo.toml
@@ -141,3 +141,7 @@ harness = false
 name = "hashed_state"
 harness = false
 required-features = ["rayon"]
+
+[[bench]]
+name = "kway_merge"
+harness = false
