--- a/crates/chainspec/Cargo.toml
+++ b/crates/chainspec/Cargo.toml
@@ -55,15 +55,16 @@ std = [
     "reth-network-peers/std",
     "serde_json/std",
     "alloy-evm/std",
+    "revm-primitives/std",
 ]
 arbitrary = [
     "alloy-chains/arbitrary",
+    "reth-ethereum-forks/arbitrary",
+    "reth-primitives-traits/arbitrary",
     "alloy-consensus/arbitrary",
     "alloy-eips/arbitrary",
     "alloy-primitives/arbitrary",
     "alloy-trie/arbitrary",
-    "reth-ethereum-forks/arbitrary",
-    "reth-primitives-traits/arbitrary",
     "revm-primitives/arbitrary",
 ]
 test-utils = [
