Add changeset writes back in (revert me)
This reverts commit ce10cd35c1b5ec72f429ee52b7c33a6371105ecd.

--- a/crates/storage/provider/Cargo.toml
+++ b/crates/storage/provider/Cargo.toml
@@ -53,6 +53,7 @@ parking_lot.workspace = true
 dashmap = { workspace = true, features = ["inline"] }
 strum.workspace = true
 eyre.workspace = true
+pretty_assertions.workspace = true
 
 # test-utils
 reth-ethereum-engine-primitives = { workspace = true, optional = true }
@@ -81,6 +82,7 @@ revm-state.workspace = true
 tempfile.workspace = true
 assert_matches.workspace = true
 rand.workspace = true
+pretty_assertions.workspace = true
 
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
 
