--- a/Cargo.toml
+++ b/Cargo.toml
@@ -747,9 +747,10 @@ vergen-git2 = "1.0.5"
 # networking
 ipnet = "2.11"
 
+# TODO: Remove this patch once alloy-evm PR is merged and released
 [patch.crates-io]
-alloy-evm = { path = "/Users/rezmah/Code/evm/crates/evm" }
-alloy-op-evm = { path = "/Users/rezmah/Code/evm/crates/op-evm" }
+alloy-evm = { git = "https://github.com/rezzmah/evm.git", branch = "configurable-evm-execution-limits" }
+alloy-op-evm = { git = "https://github.com/rezzmah/evm.git", branch = "configurable-evm-execution-limits" }
 
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
