--- a/deny.toml
+++ b/deny.toml
@@ -93,4 +93,7 @@ allow-git = [
     "https://github.com/alloy-rs/evm",
     "https://github.com/alloy-rs/hardforks",
     "https://github.com/paradigmxyz/jsonrpsee",
+    # BAL devnet-1 patches
+    "https://github.com/Soubhik-10/alloy",
+    "https://github.com/Rimeeeeee/evm",
 ]
