perf(persistence): use parallel sort for batched state writes
Replaces k-way merge with flatten + parallel sort (rayon) for
write_state_changes_merged. Benchmarks show this approach has lower
overhead for typical block counts (10-100 blocks) due to:

- Better cache locality from sequential memory access
- Rayon's parallel sort scales with CPU cores
- Avoids BinaryHeap per-element overhead

The k-way merge approach was ~2x slower than flatten+sort for storage
writes due to heap operation overhead outweighing the theoretical
O(n log k) vs O(n log n) advantage.

Also adds microbenchmarks in benches/state_merge.rs to validate
performance of different merge strategies.

--- a/crates/storage/provider/Cargo.toml
+++ b/crates/storage/provider/Cargo.toml
@@ -81,8 +81,13 @@ revm-state.workspace = true
 tempfile.workspace = true
 assert_matches.workspace = true
 rand.workspace = true
+criterion.workspace = true
 
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
+
+[[bench]]
+name = "state_merge"
+harness = false
 
 [features]
 rocksdb = ["dep:rocksdb"]
