--- a/crates/storage/libmdbx-rs/mdbx-sys/libmdbx/config.h.in
+++ b/crates/storage/libmdbx-rs/mdbx-sys/libmdbx/config.h.in
@@ -11,8 +11,10 @@
 #cmakedefine ENABLE_ASAN
 #cmakedefine ENABLE_UBSAN
 #cmakedefine01 MDBX_FORCE_ASSERTIONS
+
+/* allowing override MDBX_BUILD_CXX=OFF to build the C++ API in "private" mode only for tests */
 #if !defined(MDBX_BUILD_TEST) && !defined(MDBX_BUILD_CXX)
-#cmakedefine01 MDBX_BUILD_CXX
+#cmakedefine01 MDBX_BUILD_CXX /* using MDBX_BUILD_CXX CMake's option */
 #endif
 
 /* Common */
@@ -39,10 +41,11 @@
 #cmakedefine01 MDBX_ENABLE_DBI_LOCKFREE
 
 /* Windows */
+/* allowing override MDBX_WITHOUT_MSVC_CRT=ON to build the C++ API in "private" mode only for tests */
 #if defined(MDBX_BUILD_TEST) || !defined(MDBX_BUILD_CXX) || MDBX_BUILD_CXX
-#define MDBX_WITHOUT_MSVC_CRT 0
+#define MDBX_WITHOUT_MSVC_CRT /* hardcoded zero */ 0
 #else
-#cmakedefine01 MDBX_WITHOUT_MSVC_CRT
+#cmakedefine01 MDBX_WITHOUT_MSVC_CRT /* using MDBX_WITHOUT_MSVC_CRT CMake's option */
 #endif /* MDBX_WITHOUT_MSVC_CRT */
 
 /* MacOS & iOS */
@@ -62,6 +65,11 @@
 #endif /* MDBX_MMAP_NEEDS_JOLT */
 
 #cmakedefine01 MDBX_USE_MINCORE
+
+#cmakedefine MDBX_USE_FALLOCATE_AUTO
+#ifndef MDBX_USE_FALLOCATE_AUTO
+#cmakedefine01 MDBX_USE_FALLOCATE
+#endif /* MDBX_USE_FALLOCATE */
 
 /* Build Info */
 #ifndef MDBX_BUILD_TIMESTAMP
