feat(cli): add rocksdb feature flag to reth binary
- Add rocksdb feature to bin/reth propagating to reth-node-ethereum and reth-provider
- Add rocksdb feature to reth-node-ethereum forwarding to reth-node-builder
- Add rocksdb feature to reth-node-builder forwarding to reth-provider and reth-stages
- Fix missing debug_assertions-gated fields in RocksDBBatch::batch() constructor

--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -182,6 +182,11 @@ min-trace-logs = [
 
 edge = ["reth-ethereum-cli/edge", "reth-node-core/edge"]
 
+rocksdb = [
+    "reth-node-ethereum/rocksdb",
+    "reth-provider/rocksdb",
+]
+
 [[bin]]
 name = "reth"
 path = "src/main.rs"
