--- a/crates/node/builder/Cargo.toml
+++ b/crates/node/builder/Cargo.toml
@@ -128,3 +128,7 @@ op = [
     "reth-evm/op",
     "reth-primitives-traits/op",
 ]
+rocksdb = [
+    "reth-provider/rocksdb",
+    "reth-stages/rocksdb",
+]
