--- a/crates/ethereum/consensus/Cargo.toml
+++ b/crates/ethereum/consensus/Cargo.toml
@@ -17,6 +17,7 @@ reth-chainspec.workspace = true
 reth-consensus-common.workspace = true
 reth-primitives-traits.workspace = true
 reth-consensus.workspace = true
+reth-trie-common.workspace = true
 
 # alloy
 alloy-eips.workspace = true
@@ -24,6 +25,9 @@ alloy-primitives.workspace = true
 alloy-consensus.workspace = true
 
 tracing.workspace = true
+
+# std-only dependencies for receipt root task
+crossbeam-channel = { workspace = true, optional = true }
 
 [features]
 default = ["std"]
@@ -37,7 +41,9 @@ std = [
     "reth-ethereum-primitives/std",
     "reth-execution-types/std",
     "reth-primitives-traits/std",
+    "reth-trie-common/std",
     "tracing/std",
+    "dep:crossbeam-channel",
 ]
 
 [dev-dependencies]
