--- a/crates/chain-state/Cargo.toml
+++ b/crates/chain-state/Cargo.toml
@@ -13,6 +13,7 @@ workspace = true
 
 [dependencies]
 # reth
+reth-chain.workspace = true
 reth-chainspec.workspace = true
 reth-errors.workspace = true
 reth-execution-types.workspace = true
@@ -65,6 +66,7 @@ serde = [
     "alloy-primitives/serde",
     "parking_lot/serde",
     "rand?/serde",
+    "reth-chain/serde",
     "reth-ethereum-primitives/serde",
     "reth-execution-types/serde",
     "reth-primitives-traits/serde",
