--- a/crates/exex/test-utils/Cargo.toml
+++ b/crates/exex/test-utils/Cargo.toml
@@ -12,13 +12,13 @@ workspace = true
 
 [dependencies]
 ## reth
+reth-chain.workspace = true
 reth-chainspec.workspace = true
 reth-config.workspace = true
 reth-consensus = { workspace = true, features = ["test-utils"] }
 reth-db = { workspace = true, features = ["test-utils"] }
 reth-db-common.workspace = true
 reth-evm-ethereum = { workspace = true, features = ["test-utils"] }
-reth-execution-types.workspace = true
 reth-exex.workspace = true
 reth-payload-builder.workspace = true
 reth-network.workspace = true
