--- a/crates/exex/types/Cargo.toml
+++ b/crates/exex/types/Cargo.toml
@@ -13,8 +13,8 @@ workspace = true
 
 [dependencies]
 # reth
+reth-chain.workspace = true
 reth-chain-state.workspace = true
-reth-execution-types.workspace = true
 reth-primitives-traits.workspace = true
 
 # reth
@@ -36,7 +36,7 @@ rand.workspace = true
 default = []
 serde = [
     "dep:serde",
-    "reth-execution-types/serde",
+    "reth-chain/serde",
     "alloy-eips/serde",
     "alloy-primitives/serde",
     "rand/serde",
@@ -45,7 +45,7 @@ serde = [
     "reth-chain-state/serde",
 ]
 serde-bincode-compat = [
-    "reth-execution-types/serde-bincode-compat",
+    "reth-chain/serde-bincode-compat",
     "serde_with",
     "alloy-eips/serde-bincode-compat",
     "reth-primitives-traits/serde-bincode-compat",
