--- a/crates/stages/stages/Cargo.toml
+++ b/crates/stages/stages/Cargo.toml
@@ -13,6 +13,7 @@ workspace = true
 
 [dependencies]
 # reth
+reth-chain.workspace = true
 reth-chainspec = { workspace = true, optional = true }
 reth-codecs.workspace = true
 reth-config.workspace = true
@@ -29,7 +30,6 @@ reth-fs-util.workspace = true
 reth-network-p2p.workspace = true
 reth-primitives-traits = { workspace = true, features = ["serde-bincode-compat"] }
 reth-provider.workspace = true
-reth-execution-types.workspace = true
 reth-ethereum-primitives = { workspace = true, optional = true }
 reth-prune.workspace = true
 reth-prune-types.workspace = true
