--- a/crates/storage/storage-api/Cargo.toml
+++ b/crates/storage/storage-api/Cargo.toml
@@ -13,6 +13,7 @@ workspace = true
 
 [dependencies]
 # reth
+reth-chain.workspace = true
 reth-db-models.workspace = true
 reth-chainspec.workspace = true
 reth-db-api = { workspace = true, optional = true }
@@ -60,6 +61,7 @@ db-api = [
 ]
 
 serde = [
+    "reth-chain/serde",
     "reth-ethereum-primitives/serde",
     "reth-db-models/serde",
     "reth-execution-types/serde",
@@ -78,6 +80,7 @@ serde-bincode-compat = [
     "reth-execution-types/serde-bincode-compat",
     "reth-primitives-traits/serde-bincode-compat",
     "reth-trie-common/serde-bincode-compat",
+    "reth-chain/serde-bincode-compat",
     "reth-ethereum-primitives/serde-bincode-compat",
     "alloy-eips/serde-bincode-compat",
     "alloy-consensus/serde-bincode-compat",
