--- a/crates/transaction-pool/Cargo.toml
+++ b/crates/transaction-pool/Cargo.toml
@@ -13,6 +13,7 @@ workspace = true
 
 [dependencies]
 # reth
+reth-chain.workspace = true
 reth-chain-state.workspace = true
 reth-ethereum-primitives.workspace = true
 reth-chainspec.workspace = true
@@ -90,6 +91,7 @@ serde = [
     "revm-primitives/serde",
     "reth-primitives-traits/serde",
     "reth-ethereum-primitives/serde",
+    "reth-chain/serde",
     "reth-chain-state/serde",
     "reth-storage-api/serde",
 ]
