fix: address joshieDo's review comments
- Use edge feature instead of separate rocksdb feature for enabling RocksDB
- Remove 'expected on first run' warning logs from invariants.rs
- Keep Debug impl in historical.rs (required by lint)

--- a/crates/node/builder/Cargo.toml
+++ b/crates/node/builder/Cargo.toml
@@ -128,7 +128,7 @@ op = [
     "reth-evm/op",
     "reth-primitives-traits/op",
 ]
-rocksdb = [
+edge = [
     "reth-provider/rocksdb",
     "reth-stages/rocksdb",
 ]
