--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -180,12 +180,7 @@ min-trace-logs = [
     "reth-node-core/min-trace-logs",
 ]
 
-edge = ["reth-ethereum-cli/edge", "reth-node-core/edge"]
-
-rocksdb = [
-    "reth-node-ethereum/rocksdb",
-    "reth-provider/rocksdb",
-]
+edge = ["reth-ethereum-cli/edge", "reth-node-core/edge", "reth-node-ethereum/edge"]
 
 [[bin]]
 name = "reth"
