fix: remove unnecessary edge feature additions
RocksDB already propagates through existing edge feature chain:
reth-ethereum-cli/edge → reth-cli-commands/edge → reth-db-common/edge → reth-provider/rocksdb

--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -180,7 +180,7 @@ min-trace-logs = [
     "reth-node-core/min-trace-logs",
 ]
 
-edge = ["reth-ethereum-cli/edge", "reth-node-core/edge", "reth-node-ethereum/edge"]
+edge = ["reth-ethereum-cli/edge", "reth-node-core/edge"]
 
 [[bin]]
 name = "reth"
